# ProjectFriendship

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VERSION  build-config.json  manifest.json
Assets/: CompressTextures.bat  CompressTextures.sh
Assets/Shaders/: Air.hlsl  Base.hlsl  Ground.hlsl  PostProcessing.hlsl  Shaders.json  Text.hlsl  Water.hlsl  rayne.hlsl  utilities.hlsl
Assets/models/: airbubble.blend  daphnia.blend  goldfish.blend  level.blend  player.blend  thread.blend
Other/: RunPancake-macOS.sh  RunPancake-windows.bat  RunWithPreview-macOS.sh
Resources/models/: airbubble.sgm  daphnia.sga  daphnia.sgm  eggs.sgm  goldfish.sga  goldfish.sgm  grass.sgm  ground.sgm  player.sga  player.sgm  player_hand.sgm  reed.sgm  stones.sgm  thread.sgm  water.sgm  waterlily.sgm
Sources/: PFAirbubble.cpp  PFAirbubble.h  PFApplication.cpp  PFApplication.h  PFCameraManager.cpp  PFCameraManager.h  PFGoldfish.cpp  PFMessage.cpp  PFMessage.h  PFPlayer.cpp  PFPlayer.h  PFPrey.cpp  PFPrey.h  PFThread.cpp  PFThread.h  PFTypes.cpp  PFTypes.h  PFWorld.cpp  PFWorld.h  main.cpp
